RESOLVED FIXED 142329
[CSS Grid Layout] Using automatic (instead of min-content) minimums for 'auto' tracks
https://bugs.webkit.org/show_bug.cgi?id=142329
Summary [CSS Grid Layout] Using automatic (instead of min-content) minimums for 'aut...
Sergio Villar Senin
Reported 2015-03-05 01:40:58 PST
This has recently changed in the specs. See https://lists.w3.org/Archives/Public/www-style/2015Jan/0166.html for more details. The most important part is the following: More precisely (syntax-wise), this would allow 'auto' to be used within the minmax() function (it's currently forbidden) and have the 'auto' keyword map to minmax(auto, auto) instead of minmax(min-content, max-content). * As a minimum, 'auto' would mean "use the specified minimum size, or if that is auto, treat as 0 or min-content per Flexbox rules". * As a maximum, 'auto' would mean "use the max-content size".
Attachments
Patch (81.76 KB, patch)
2015-09-15 02:05 PDT, Sergio Villar Senin
darin: review+
Sergio Villar Senin
Comment 1 2015-09-14 06:01:31 PDT
This involves merging the following two patches from Blink: * [CSSGridLayout] Use automatic minimums for 'auto' tracks r198697 * [CSS Grid Layout] The 'auto' value is valid for maxTrackBreadth property r200478
Sergio Villar Senin
Comment 2 2015-09-15 02:05:17 PDT
Darin Adler
Comment 3 2015-09-16 10:18:04 PDT
Comment on attachment 261181 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=261181&action=review > Source/WebCore/rendering/RenderGrid.cpp:559 > + return LayoutUnit(); In new code we often use { } instead of LayoutUnit(); a bit more terse, not 100% sure it’s better.
Sergio Villar Senin
Comment 4 2015-09-17 05:13:53 PDT
Note You need to log in before you can comment on or make changes to this bug.